# Logic

./: .gitignore  CMakeLists.txt  example_0.sh  test.cpp
Headers/: Expressions.h  Interpretation.h  Logic.h  Model.h  atl.h  atlpp.hpp
Sources/: Interpretation.c  Logic.c  Model.c  Parser.c  atl.c  atlpp.cpp  grammar.y  interpretator.c
atl/: CMakeLists.txt  Expressions.c  Model.c  Model.h  Parser.c  Parser.h  atl.c  atl.h  grammar.tab.c
examples/: example.sh  example2.sh  example_0.sh  factorial.sh  path_finding.sh
interpretator/: CMakeLists.txt  interpretator.c  interpretator.cpp
